add index, update swagger, new errors
