# docs/swagger.json
@@ -105,7 +105,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Required task id to get",
+                        "description": "Required task id for getting",
                         "name": "params",
                         "in": "path",
                         "required": true
@@ -113,7 +113,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Task was updated successfully"
+                        "description": "Task was gotten successfully",
+                        "schema": {
+                            "$ref": "#/definitions/service.GetTaskWithStatusNameModel"
+                        }
                     },
                     "400": {
                         "description": "Invalid input data",
@@ -138,7 +141,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Required task id to delete",
+                        "description": "Required task id for deleting",
                         "name": "params",
                         "in": "path",
                         "required": true
@@ -171,7 +174,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Required task id to update",
+                        "description": "Required task id for updating",
                         "name": "params",
                         "in": "path",
                         "required": true
@@ -254,6 +257,35 @@
             "properties": {
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "service.GetTaskWithStatusNameModel": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "deleted": {
+                    "type": "boolean"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "status_name": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         },
